# Rope-Sim

./: .gitignore  README.md  pyproject.toml
rope_sim/: __init__.py  animator.py  calculs_corde.py  controller.py  rope.py  simulator.py
