[tool.poetry]
name = "rope-sim"
version = "0.1.0"
description = ""
authors = ["Gustave Coulombe <magikgus@gmail.com>"]
readme = "README.md"
packages = [{include = "rope_sim"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
